--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: https://dashboard.flutterwave.com/donate/ujorlyer2qdp
+custom: https://www.paypal.com/donate?hosted_button_id=4X6C8HF764TU2&source=url
